# ClipMark

./: .gitignore  .impeccable.md  AGENTS.md  PASTE_RULES.md  PRD.md  README.md  TECH_DECISIONS.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: COLOR_SYSTEM_PLAN.md  COLOR_TOKEN_SPEC.md  DESIGN.md  PREVIEW_PERFORMANCE_MIGRATION.md  TECH_DECISIONS.md  USER_FLOWS.md
docs/frontend-audit/: 2026-04-01-clean-code-review.md
docs/stitch_clipmark_home_screen/: markdown_quartz_design_system_specification_unified.html
docs/stitch_clipmark_home_screen-3/: code.html
docs/stitch_clipmark_home_screen_2/: markdown_quartz_full_design_system_specification.html
scripts/: render-app-icon.mjs
src/: App.test.tsx  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/hooks/: useAppMenuBindings.test.tsx  useAppMenuBindings.ts  useAppMenuController.test.ts  useAppMenuController.ts  useAppPreferences.test.ts  useAppPreferences.ts  useAppShellActions.test.tsx  useAppShellActions.ts  useAppShellLifecycle.test.tsx  useAppShellLifecycle.ts  useAppViewState.test.tsx  useAppViewState.ts  useCopyFilePath.test.tsx  useCopyFilePath.ts  useDebouncedValue.test.tsx  useDocumentFileActions.test.tsx  useDocumentFileActions.ts  useDocumentSession.ts  useDocumentSessionFileEffects.test.tsx  useDocumentSessionFileEffects.ts  useDocumentWorkspaceState.test.tsx  useDocumentWorkspaceState.ts  useEditorViewState.tsx  useIdleValue.test.tsx  useIdleValue.ts  (+16 more)
(+107 files in other folders)
